--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
-    <script defer src="https://unpkg.com/p5.collide2d"></script>
+    <!-- <script defer src="https://unpkg.com/p5.collide2d"></script> -->
+    <script src="js/libraries/p5.collide2d.js"></script>
+
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
