--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <!-- My script(s) -->
-    <script src="js/script.js"></script>
+    <script src="js/menu.js"></script>
   </head>
 
   <body>
